--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -3,6 +3,9 @@ name = "backend"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [".", "entity", "migration"]
+
 [dependencies]
 actix-web = "4.9.0"
 serde = "1.0.215"
